--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3"
 
 services:
   zookeeper:
-    image: docker.io/bitnami/zookeeper:3.8
+    image: "bitnami/zookeeper:latest"
+    restart: "no"
     ports:
       - "2181:2181"
     volumes:
@@ -10,12 +11,17 @@ services:
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
   kafka:
-    image: docker.io/bitnami/kafka:3.3
+    container_name: kafka
+    image: "bitnami/kafka:latest"
+    restart: "no"
     ports:
       - "9092:9092"
     volumes:
       - "kafka_data:/bitnami"
     environment:
+#      - KAFKA_BROKER_ID=1
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
     depends_on:
