--- a/kraft_v2/docker-compose.yaml
+++ b/kraft_v2/docker-compose.yaml
@@ -3,6 +3,7 @@ version: "3"
 services:
   zookeeper:
     image: 'bitnami/zookeeper:latest'
+    container_name: kafka
     ports:
       - '2181:2181'
     environment:
@@ -15,13 +16,17 @@ services:
       - KAFKA_ENABLE_KRAFT=yes
       - KAFKA_CFG_PROCESS_ROLES=broker,controller
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
       - KAFKA_BROKER_ID=1
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@127.0.0.1:9093
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
-    depends_on:
-      - zookeeper
+#  kafka-ui:
+#    image: provectuslabs/kafka-ui
+#    container_name: kafka-ui
+#    ports:
+#      - "8080:8080"
+#    restart: always
+#    environment:
+#      - KAFKA_CLUSTERS_0_NAME=kafka
+#      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
