--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 
 services:
   zookeeper:
+    container_name: zookeeper
     image: "bitnami/zookeeper:latest"
     restart: "no"
     ports:
